# GameInC

./: .gitignore  CMakeLists.txt  README.md  build-play.bat  build-test.bat  build.bat  build.py  buildrun.bat  buildrunplay.bat  buildruntest.bat  compile_commands.json  project.json  pyproject.toml  renderDocsCapture.cap  setup.py
.cache/clangd/index/: FastNoiseLite.h.D6BA0FAC1DA71D13.idx  aabb2d.h.9BEC8FC47197972C.idx  affine-mat.h.6B3B86B178B0E626.idx  affine-post.h.62F52E667C3FC22C.idx  affine-pre.h.0F56233B9FDAB7C5.idx  affine.h.92031FCC65379523.idx  affine.h.DF94D11E5947BE84.idx  affine2d.h.7A33DE7D67325340.idx  bezier.h.6410F827B2024B26.idx  boss.c.2D619ECE3EAF86D2.idx  boss.h.EC6365AD531502C6.idx  box.h.5BC1242588451B1E.idx  cam.h.576F5C8335EB77F1.idx  camera.c.AA3FBA0455003773.idx  camera.h.66E74A61A488256A.idx  cglm.h.D488184113F7F94D.idx  chunk.c.6352D57E2C3CB1DB.idx  chunk.h.021BCEB8FE264A43.idx  chunk_generator.c.F5AA6F1FF4C8650B.idx  chunk_generator.h.3FEC4946D7C431C2.idx  color.h.FE5930EE52A989C3.idx  common.h.181E11475E7ADDD5.idx  core.c.4ABBA2CD1526124D.idx  core.h.E937CC6BE37F6CEF.idx  curve.h.1CBD17D3A4AF78D4.idx  data_types.c.E9F69E3FE280A0BF.idx  data_types.h.19A07FB06A1AAEB1.idx  dynamic_array.c.CD987697158660C6.idx  dynamic_array.h.0A46BFDB5559E0F5.idx  ease.h.9A6C9E6B254FAB3C.idx  engine.c.B148008FFE6421E8.idx  engine.h.B52A8C8ADF14542D.idx  euler.h.70B11B3AD9300D1C.idx  euler_to_quat_rh.h.A73FDE954E782BA8.idx  file.c.A8D55AB375EF53BB.idx  file.h.84773E351AE62C48.idx  frustum.h.B4AAF63BABDC8990.idx  glad.c.6AAAC92A30F9AF58.idx  glad.h.0BC9F81F01A49061.idx  glfw3.h.2878C4355637F8F4.idx  (+72 more)
include/glad/: glad.h
include/nuklear/: overview.c
lib/glad/: glad.c
network/: client.c  http.c  http_parser.c  http_parser.h  http_server.c  http_server.h  json.c  netgame.c  netgame.h  test.c
playground/: CMakeLists.txt  default-hash-table.h  play.c
playground/src/: default-hash-table.h  play.c
py/: t2.py  terrain.py
scripts/: build-play.bat  build-test.bat  build.bat  buildrun.bat  color_image.py  generate_atlas.py  run.bat
shaders/: deffered.frag  deffered.vert  deffered_fragment.glsl  depth_map.vert  fragment.glsl  g_buffer.frag  highlight.frag  highlight_fragment.glsl  highlight_vertex.glsl  light.vert  vertex.glsl
shaders/withGeometry/: fragment.glsl  geometry.glsl  vertex.glsl
src/: camera.c  camera.h  image.c  image.h  input.c  input.h  main.c
src/core/: chrono.c  core.c  core.h  data_types.c  data_types.h  dynamic_array.c  dynamic_array.h  file.c  file.h  job.c  log.c  log.h  queue.c  result.c  result.h  safe_array.c  safe_memory.c  safe_strings.c  safe_strings.h  thread.c  thread.h  worker.c
src/core/worker/: boss.c  boss.h  job.c  job.h  mutex.h  thread.c  thread.h  worker.c  worker.h
src/engine/: engine.c  engine.h  mesh.c  mesh.h  renderer.c  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/game/: game.c
src/gui/: gui.c  gui.h
src/world/: chunk.c  chunk.h  chunk_generator.c  chunk_generator.h  world.c  world.h
test/: CMakeLists.txt  test.c
test/src/: test.c
